Added integration tests in FrameworkControllerIntegrationTest